--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,20 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!--状态栏颜色-->
         <item name="colorPrimaryDark">@color/dark_blue_green</item>
         <!--Toolbar颜色-->
         <item name="colorPrimary">@color/dark_blue_green</item>
         <!--返回键样式-->
         <item name="drawerArrowStyle">@style/AppTheme.DrawerArrowToggle</item>
+        <!--App bar 上的標題與更多選單中的文字顏色 -->
+        <item name="android:textColor">@color/black</item>
+        <item name="android:homeAsUpIndicator">@color/white</item>
+
+        <item name="android:windowFullscreen">true</item>
     </style>
     <style name="AppTheme.DrawerArrowToggle" parent="Base.Widget.AppCompat.DrawerArrowToggle">
-        <item name="color">@color/black</item>
+        <item name="color">@color/white</item>
     </style>
 
 </resources>
